--- a/OutgoingDamageLog/assets/outgoingdamagelog/lang/en.json
+++ b/OutgoingDamageLog/assets/outgoingdamagelog/lang/en.json
@@ -1,3 +1,7 @@
 {
-    "hello": "hello world!"
+  "slashing": "Slashing",
+  "piercing": "Piercing",
+  "blunt": "Blunt",
+  "unknown": "Unknown",
+  "damage-output": "Dealt {0} {1} damage to {2}"
 }
